# Melnichanka

./: .dockerignore  .editorconfig  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: docker-publish.yml  main.yml
clients/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_rename_director_position_directorposition.py  0004_alter_clients_railway_station.py  0006_clients_user.py  0008_director_position_alter_clients_director_position.py
clients/tests/: conftest.py  test_models_clients.py  test_permissions_clients.py  test_serializers.py  test_servises.py  (+3 more)
decorators/: query_decorator.py
docs/: melnichanka_redoc.html  melnichanka_swager_ui.html  schema.json
goods/: admin.py  models.py  serializers.py  urls.py  views.py
logistics/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
makedoc/: constants.py  data_service.py  serializers.py  services.py  services_old.py  tasks.py  urls.py  utils.py  views.py
melnichanka/: .gitignore  Dockerfile  README.md  celery.py  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  nginx.conf  settings.py  urls.py  wsgi.py
scripts/: faker_script.py  scr.py
users/: admin.py  managers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
(+166 files in other folders)
