[tool.poetry]
name = "melnichanka"
version = "0.1.0"
description = ""
authors = ["leeroymk <demonic90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"


[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
