[tool.poetry]
name = "melnichanka"
version = "0.1.0"
description = ""
authors = ["leeroymk <demonic90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
python-dotenv = "^1.0.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
django-debug-toolbar = "^4.3.0"
djangorestframework = "^3.15.1"
django-rest-passwordreset = "^1.4.0"
django-extensions = "^3.2.3"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.2"
psycopg2-binary = "^2.9.9"
gunicorn = "21.2.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.7"
django-stubs = "^4.2.7"
flake8 = "^7.0.0"
flake8-print = "^5.0.0"
flake8-eradicate = "^1.5.0"
flake8-markdown = "^0.5.0"
djangorestframework-stubs = "^3.14.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-testdox = "^3.1.0"
faker = "^24.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
